--- a/index.html
+++ b/index.html
@@ -23,14 +23,99 @@
         margin: 0;
         padding: 0;
         color: #333;
-        background: #f8f9fa;
+        background: #ffffff;
         line-height: 1.6;
       }
       .hero {
-        background: #fff;
+        position: relative;
         color: #333;
         padding: 80px 20px;
         text-align: center;
+        overflow: hidden;
+        min-height: 80vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: #ffffff;
+      }
+      /* Aurora Background Effect */
+      .aurora-bg {
+        position: absolute;
+        inset: 0;
+        overflow: hidden;
+        z-index: 0;
+        mask-image: radial-gradient(
+          ellipse at 50% 50%,
+          black 30%,
+          transparent 80%
+        );
+        -webkit-mask-image: radial-gradient(
+          ellipse at 50% 50%,
+          black 30%,
+          transparent 80%
+        );
+      }
+      .aurora-inner {
+        position: absolute;
+        inset: -10px;
+        background-image: repeating-linear-gradient(
+            100deg,
+            rgba(255, 255, 255, 0.8) 0%,
+            rgba(255, 255, 255, 0.8) 7%,
+            transparent 10%,
+            transparent 12%,
+            rgba(255, 255, 255, 0.8) 16%
+          ),
+          repeating-linear-gradient(
+            100deg,
+            #3182ce 10%,
+            #6366f1 15%,
+            #60a5fa 20%,
+            #a78bfa 25%,
+            #3b82f6 30%
+          );
+        background-size: 300%, 200%;
+        background-position: 50% 50%, 50% 50%;
+        filter: blur(10px);
+        opacity: 0.15;
+        pointer-events: none;
+        will-change: transform;
+        transition-opacity: 300ms ease-in-out;
+        animation: aurora 60s linear infinite;
+      }
+      @keyframes aurora {
+        from {
+          background-position: 50% 50%, 50% 50%;
+        }
+        to {
+          background-position: 350% 50%, 350% 50%;
+        }
+      }
+      .aurora-inner::after {
+        content: '';
+        position: absolute;
+        inset: 0;
+        background-image: repeating-linear-gradient(
+            100deg,
+            rgba(255, 255, 255, 0.8) 0%,
+            rgba(255, 255, 255, 0.8) 7%,
+            transparent 10%,
+            transparent 12%,
+            rgba(255, 255, 255, 0.8) 16%
+          ),
+          repeating-linear-gradient(
+            100deg,
+            #3182ce 10%,
+            #6366f1 15%,
+            #60a5fa 20%,
+            #a78bfa 25%,
+            #3b82f6 30%
+          );
+        background-size: 200%, 100%;
+        background-attachment: fixed;
+        mix-blend-mode: difference;
+        animation: aurora 60s linear infinite;
       }
       .container {
         max-width: 1200px;
@@ -40,14 +125,18 @@
       .hero-container {
         max-width: 1200px;
         margin: 0 auto;
+        position: relative;
+        z-index: 1;
       }
       .hero-flex {
         display: flex;
         gap: 2rem;
-        padding: 5rem 0 0 0;
+        padding: 2rem 0 0 0;
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        position: relative;
+        z-index: 1;
       }
       .hero-subtitle-container {
         display: flex;
@@ -63,8 +152,8 @@
         margin: 0;
       }
       .hero-title-highlight {
-        color: #3182ce;
-        font-weight: 700;
+        color: #000000;
+        font-weight: 500;
       }
       .animated-word-container {
         position: relative;
@@ -78,10 +167,11 @@
       }
       .animated-word {
         position: absolute;
-        font-weight: 600;
+        font-weight: 700;
         opacity: 0;
         transform: translateY(3rem);
         transition: all 0.5s ease;
+        color: #004691;
       }
       .animated-word.active {
         opacity: 1;
@@ -103,7 +193,7 @@
       .btn {
         padding: 1rem 2rem;
         font-size: 1.25rem;
-        border-radius: 1rem;
+        border-radius: 2rem;
         cursor: pointer;
         display: flex;
         align-items: center;
@@ -112,15 +202,15 @@
         font-weight: 500;
       }
       .btn-primary {
-        background: #2b6cb0;
+        background: #004691;
         color: white;
         border: none;
-        box-shadow: 0 4px 10px rgba(43, 108, 176, 0.3);
+        box-shadow: 0 6px 15px rgba(43, 108, 176, 0.3);
       }
       .btn-primary:hover {
-        background: #2c5282;
+        background: #004691;
         transform: translateY(-2px);
-        box-shadow: 0 6px 15px rgba(43, 108, 176, 0.4);
+        box-shadow: 0 6px 30px rgba(43, 172, 176, 0.4);
       }
       .btn-outline {
         background: transparent;
@@ -267,6 +357,18 @@
         margin-top: 60px;
       }
       @media (max-width: 768px) {
+        .hero {
+          padding: 60px 20px;
+        }
+        .hero-container {
+          padding: 15px;
+        }
+        .hero-title {
+          font-size: 2.5rem;
+        }
+        .aurora-bg {
+          opacity: 0.7;
+        }
         .hero-title {
           font-size: 2.5rem;
         }
@@ -674,6 +776,9 @@
   </head>
   <body>
     <div class="hero">
+      <div class="aurora-bg">
+        <div class="aurora-inner"></div>
+      </div>
       <div class="hero-container">
         <div class="hero-flex">
           <div class="hero-subtitle-container">
@@ -712,7 +817,7 @@
 
           <div class="hero-image-container">
             <img
-              src="images/Group-134-p-1080.jpg"
+              src="images/Bildschirmfoto-2024-11-17-um-01.30.04-1.png"
               alt="BPER System Gerät mit Echtzeit-Blutdruckanzeige"
               class="hero-device-image"
             />
