Update button style to transparent with border

--- a/index.html
+++ b/index.html
@@ -202,13 +202,14 @@
         font-weight: 500;
       }
       .btn-primary {
-        background: #004691;
-        color: white;
-        border: none;
+        background: #ffffff00;
+        color: #004691;
+        border: 1px solid #004691;
         box-shadow: 0 6px 15px rgba(43, 108, 176, 0.3);
       }
       .btn-primary:hover {
         background: #004691;
+        color: #ffffff;
         transform: translateY(-2px);
         box-shadow: 0 6px 30px rgba(43, 172, 176, 0.4);
       }
